--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello Railway (Root Files)!</title>
+    <title>Hello Railway (Docker Root Files)!</title>
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <h1>Halo, Railway!</h1>
-    <p>Ini adalah aplikasi "Hello World" Anda dengan file-file di root folder.</p>
+    <h1>Halo, Railway dengan Docker!</h1>
+    <p>Aplikasi "Hello World" ini semua filenya ada di root folder dan di-deploy dengan Dockerfile.</p>
     <button id="myButton">Pencet Saya!</button>
 
     <script src="/script.js"></script>
