--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <button id="addReminderBtn">Tambah Pengingat</button>
         </div>
 
-        <div class="main-content">
+        <div class="main-columns">
             <div class="left-panel">
                 <h2>Daftar Pengingat</h2>
                 <div id="reminderList" class="scrollable">
