--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <div class="container">
         <h1>AI Pengingat Pribadi</h1>
+        
+        <div id="realtimeClock" class="realtime-clock"></div>
 
         <div class="input-section">
             <label for="reminderInput">Masukkan catatan jadwal Anda:</label>
